--- a/astro-blog-template/src/components/BaseHead.astro
+++ b/astro-blog-template/src/components/BaseHead.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/fonts.css'
 import '../styles/global.css'
+// import '../styles/reset.css'
+// import '../styles/normalize.css'
 
 export interface Props {
   title: string;
