--- a/astro-blog-template/src/components/BaseHead.astro
+++ b/astro-blog-template/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/fonts.css'
-import '../styles/global.css'
+import '../styles/fonts.css';
+import '../styles/global.css';
 // import '../styles/reset.css'
 // import '../styles/normalize.css'
 
@@ -11,14 +11,13 @@ export interface Props {
 }
 
 const { title, description, permalink } = Astro.props;
-const socialUrl = Astro.site.href + 'assets/social.png'
+const socialUrl = Astro.site.href + 'assets/social.png';
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
@@ -42,8 +41,11 @@ const socialUrl = Astro.site.href + 'assets/social.png'
 <!-- This is intentionally inlined to avoid FOUC -->
 <script>
   const root = document.documentElement;
+  if (!localStorage.getItem('theme')) {
+    localStorage.setItem('theme', 'dark'); // default to dark
+  }
   const theme = localStorage.getItem('theme');
-  if (theme === 'dark' || (!theme) && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
     root.classList.add('theme-dark');
   } else {
     root.classList.remove('theme-dark');
