--- a/astro-blog-template/src/components/Logo.astro
+++ b/astro-blog-template/src/components/Logo.astro
@@ -3,8 +3,20 @@
     display: block;
     width: 75px;
   }
+  .logo {
+    width: 75px;
+    height: 50px;
+    background-size: 75px 50px;
+    background-image: url('/assets/logo.webp');
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+  }
+  .logo:hover {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+  }
 </style>
 
 <a href="/">
-  <img alt="Blog Logo" src="/assets/logo.webp" width="75" height="50">
+  <div class="logo"></div>
 </a>
