--- a/astro-blog-template/src/styles/global.css
+++ b/astro-blog-template/src/styles/global.css
@@ -38,43 +38,43 @@ h6 {
   font-family: var(--font-family-sans);
   font-weight: 700;
   line-height: 1.2;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.5rem 0;
 }
 
 h1 {
   font-family: var(--font-family-serif);
-  font-size: 2em;
-  margin: 0 0 1em 0;
+  font-size: 2rem;
+  margin: 0 0 1rem 0;
   color: var(--primary-color);
 }
 
 h2 {
-  margin: 1.6em 0 0 0;
-  font-size: 1.8em;
+  margin: 1.6rem 0 0 0;
+  font-size: 1.5rem;
+  color: var(--primary-color);
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.3rem;
 }
 
 h4 {
-  font-size: 1.4em;
+  font-size: 1.2rem;
 }
 
 h5 {
-  font-size: 1.3em;
+  font-size: 1.1rem;
 }
 
 h6 {
-  font-size: 1.2em;
+  font-size: 1rem;
 }
 
 p,
 ul,
 ol {
-  font-size: 1.3rem;
-  line-height: 1.75em;
-  margin: 1.2em 0;
+  line-height: 1.75rem;
+  margin: 1.2rem 0;
 }
 
 ol,
@@ -104,13 +104,13 @@ a:hover {
 
 p a {
   text-decoration: none;
-  box-shadow: inset 0 -0.12em 0 var(--primary-color);
+  box-shadow: inset 0 -0.12rem 0 var(--primary-color);
   -webkit-transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 p a:hover {
-  box-shadow: inset 0 -1.5em 0 var(--primary-color);
+  box-shadow: inset 0 -1.5rem 0 var(--primary-color);
   color: #fff;
 }
 
@@ -129,9 +129,9 @@ hr {
 
 code {
   font-family: 'SF Mono', menlo, inconsolata, monospace;
-  font-size: calc(1em - 2px);
+  font-size: calc(1rem - 2px);
   color: #555;
-  padding: 0.2em 0.4em;
+  padding: 0.2rem 0.4rem;
   border-radius: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -139,8 +139,8 @@ code {
 
 pre {
   border-radius: 8px !important;
-  margin: 1.2em 0 !important;
-  padding: 1.2em;
+  margin: 1.2rem 0 !important;
+  padding: 1.2rem;
 }
 
 pre code {
@@ -149,7 +149,7 @@ pre code {
 
 blockquote {
   border-left: 4px solid #cccccc;
-  font-size: 1.4em;
+  font-size: 1.4rem;
   font-style: italic;
   margin: 2rem 0;
   padding-left: 2rem;
@@ -173,51 +173,51 @@ figure {
   vertical-align: baseline;
   -webkit-margin-start: 0;
   -webkit-margin-end: 0;
-  margin: 0 0 3em 0;
+  margin: 0 0 3rem 0;
 }
 
 table {
   border-collapse: collapse;
   font-family: var(--font-family-sans);
-  font-size: 1.125em;
-  margin: 2em 0;
+  font-size: 1.125rem;
+  margin: 2rem 0;
 }
 
 th {
   border-bottom: 2px solid #cccccc;
-  padding: 0.4em 0.8em;
+  padding: 0.4rem 0.8rem;
 }
 
 td {
-  padding: 0.4em 0.8em;
+  padding: 0.4rem 0.8rem;
 }
 
 .container {
   margin: 0 auto;
-  max-width: 42em;
+  max-width: 42rem;
   width: 100%;
 }
 
 .content h1 {
-  font-size: 2em;
-  margin: 1em 0;
+  font-size: 2rem;
+  margin: 1rem 0;
 }
 
 .theme-toggle {
   display: inline-flex;
   align-items: center;
   height: 100%;
-  padding: 0.33em 0.67em;
+  padding: 0.33rem 0.67rem;
   padding-top: 8px;
   margin-left: 10px;
-  gap: 0.6em;
-  border-radius: 99em;
+  gap: 0.6rem;
+  border-radius: 99rem;
   background-color: var(--theme-code-inline-bg);
 }
 
 .theme-toggle > label:focus-within {
   outline: 2px solid transparent;
-  box-shadow: 0 0 0 0.08em var(--theme-accent), 0 0 0 0.12em white;
+  box-shadow: 0 0 0 0.08rem var(--theme-accent), 0 0 0 0.12rem white;
 }
 
 .theme-toggle > label {
@@ -247,11 +247,11 @@ input[name='theme-toggle'] {
 
 @media (max-width: 1020px) {
   h1 {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   .content h1 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
   }
 }
 
@@ -264,6 +264,6 @@ input[name='theme-toggle'] {
   ul,
   ol {
     font-size: 1.2rem;
-    margin: 1em 0;
+    margin: 1rem 0;
   }
 }
