--- a/astro-blog-template/src/pages/about.astro
+++ b/astro-blog-template/src/pages/about.astro
@@ -19,6 +19,16 @@ console.log('fetchAbouts', fetchAbouts.data[0].attributes.content);
 </BaseLayout>
 
 <style>
+  .container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    margin: auto;
+    overflow: scroll;
+  }
   @media (max-width: 1020px) {
     .about-image {
       float: none;
