--- a/astro-blog-template/src/pages/blog/[slug].astro
+++ b/astro-blog-template/src/pages/blog/[slug].astro
@@ -19,36 +19,101 @@ export async function getStaticPaths() {
 
 const { title, content, slug, excerpt, publishedAt, cover, categories } = Astro.props.post.attributes; // 这里对应 getStaticPaths 中的 return
 const permalink = `${Astro.site.href}blog/${slug}`;
+const contentRes = await markdown(content);
+// 匹配所有标题的正则
+let reg = /(#{1,6})\s(.*)/g;
+// 匹配到的所有标题
+let titleArr = content.match(reg);
+// 将匹配结果中的#替换成对应的html标签
+let replacedTitleArr = titleArr.map(item => {
+  return item.replace(reg, (match, p0, p1) => {
+    let fontSize = '';
+    let anchorPointContent = p1;
+    switch (p0.length) {
+      case 1:
+        fontSize = '1.2rem';
+        break;
+      case 2:
+        fontSize = '1.0rem';
+        break;
+      case 3:
+        fontSize = '0.9rem';
+        break;
+      case 4:
+        fontSize = '1.8rem';
+        break;
+      case 5:
+        fontSize = '0.7rem';
+        break;
+      case 6:
+        fontSize = '0.6rem';
+        break;
+    }
+    if (anchorPointContent.indexOf('</span>') !== -1) anchorPointContent = anchorPointContent.replace('</span>', '').replace(/<span(([\s\S])*?)>/g, ''); // 过滤其他标签
+    return `<a href="#${anchorPointContent.toLowerCase().replace(/[\s]/g, '-').replace(/[:：]/g, '')}" style="display: block;width: 230px;font-size:${fontSize};overflow: hidden;white-space: nowrap;text-overflow: ellipsis;padding:0 20px;"><div style="width: 100%">${p1}</div></a>`;
+  });
+});
+const navRes = await markdown(replacedTitleArr.join('\n'));
+console.log('result', navRes);
 ---
 
+<!-- <script define:vars={{content}}>
+
+</script> -->
 <BaseLayout title={title} description={excerpt} permalink={permalink} current="blog">
-  <header>
-    <h1>{title}</h1>
-    <div class="header-detail">
-      <div>{moment(publishedAt).format('YYYY-MM-DD')}</div>
-      {categories.data.length ? <div class="header-line"></div> : null}
-      <div class="header-tags">
-        {
-          categories.data.map(category => {
-            return <a href={`/category/${category.attributes.name}`}>{category.attributes.name}</a>;
-          })
-        }
-      </div>
+  <div class="container-wrap">
+    <nav class="nav">
+      {navRes}
+    </nav>
+    <div class="center-content">
+      <header>
+        <h1>{title}</h1>
+        <div class="header-detail">
+          <div>{moment(publishedAt).format('YYYY-MM-DD')}</div>
+          {categories.data.length ? <div class="header-line" /> : null}
+          <div class="header-tags">
+            {
+              categories.data.map(category => {
+                return <a href={`/category/${category.attributes.name}`}>{category.attributes.name}</a>;
+              })
+            }
+          </div>
+        </div>
+        <div class="header-image">
+          <div style={{ width: '80%', height: '30em', background: `url(http://42.192.151.130:9003${cover.data[0].attributes.url})`, 'background-size': '100% 100%', 'background-repeat': 'no-repeat' }}></div>
+        </div>
+      </header>
+      <article class="content">
+        {contentRes}
+      </article>
+      <hr />
+      <Bio />
     </div>
-    <div class="header-image">
-      <div style={{ width: '80%', height: '30em', background: `url(http://42.192.151.130:9003${cover.data[0].attributes.url})`, 'background-size': '100% 100%', 'background-repeat': 'no-repeat' }}></div>
-    </div>
-  </header>
-  <div class="container">
-    <article class="content">
-      {async () => await markdown(content)}
-    </article>
-    <hr />
-    <Bio />
   </div>
 </BaseLayout>
 
 <style>
+  .container-wrap {
+    width: 100%;
+    height: 100%;
+  }
+
+  .nav {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 250px;
+    height: 100%;
+    overflow: scroll;
+    border: 1px solid #eee;
+  }
+
+  .center-content {
+    margin-left: 250px;
+    height: 100%;
+    overflow: scroll;
+  }
+
   header {
     text-align: center;
   }
