--- a/astro-blog-template/src/pages/category/[name].astro
+++ b/astro-blog-template/src/pages/category/[name].astro
@@ -78,11 +78,22 @@ if (fetchPosts.data.length) {
 </BaseLayout>
 
 <style>
+  .container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    margin: auto;
+    overflow: scroll;
+  }
   .categories-list {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
   }
   .categories-list a {
     margin-right: 10px;
