feat: 文章目录添加间隔

--- a/astro-blog-template/src/pages/blog/[slug].astro
+++ b/astro-blog-template/src/pages/blog/[slug].astro
@@ -22,35 +22,43 @@ const permalink = `${Astro.site.href}blog/${slug}`;
 const contentRes = await markdown(content);
 // 匹配所有标题的正则
 let reg = /(#{1,6})\s(.*)/g;
+// let reg = /(?<!`)(#(?:#|[^#\n])*)/;
 // 匹配到的所有标题
 let titleArr = content.match(reg);
 // 将匹配结果中的#替换成对应的html标签
 let replacedTitleArr = titleArr.map(item => {
   return item.replace(reg, (match, p0, p1) => {
-    let fontSize = '';
+    let fontSize = '',
+      marginLeft = '';
     let anchorPointContent = p1;
     switch (p0.length) {
       case 1:
-        fontSize = '1.2rem';
+        fontSize = '0.9rem';
+
         break;
       case 2:
-        fontSize = '1.0rem';
+        fontSize = '0.9rem';
+        marginLeft = '15px';
         break;
       case 3:
         fontSize = '0.9rem';
+        marginLeft = '15px';
         break;
       case 4:
-        fontSize = '1.8rem';
+        fontSize = '0.9rem';
+        marginLeft = '15px';
         break;
       case 5:
-        fontSize = '0.7rem';
+        fontSize = '0.9rem';
+        marginLeft = '15px';
         break;
       case 6:
-        fontSize = '0.6rem';
+        fontSize = '0.9rem';
+        marginLeft = '15px';
         break;
     }
     if (anchorPointContent.indexOf('</span>') !== -1) anchorPointContent = anchorPointContent.replace('</span>', '').replace(/<span(([\s\S])*?)>/g, ''); // 过滤其他标签
-    return `<a href="#${anchorPointContent.toLowerCase().replace(/[\s]/g, '-').replace(/[:：]/g, '')}" style="display: block;width: 230px;font-size:${fontSize};overflow: hidden;white-space: nowrap;text-overflow: ellipsis;padding:0 20px;"><div style="width: 100%">${p1}</div></a>`;
+    return `<a href="#${anchorPointContent.toLowerCase().replace(/[\s]/g, '-').replace(/[:：]/g, '')}" style="display: block;width: 215px;font-size:${fontSize};overflow: hidden;white-space: nowrap;text-overflow: ellipsis;padding:0 20px;margin-left:${marginLeft}"><div style="width: 100%">${p1}</div></a>`;
   });
 });
 const navRes = await markdown(replacedTitleArr.join('\n'));
