feat: 修改备案相关内容

--- a/astro-blog-template/src/components/Footer.astro
+++ b/astro-blog-template/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer-left">
     Copyright © {new Date().getFullYear()} Zard Blog. Powered by <a href="https://astro.build" target="_blank" rel="noopener">Astro</a>.
-    <a href="https://www.twitter.com/Charca" target="_blank" rel="noopener">湖ICP备18045521号</a>.
+    <a href="https://beian.miit.gov.cn" target="_blank" rel="noopener">鄂ICP备2023003770号</a>.
   </div>
 </footer>
 
