--- a/astro-blog-template/src/pages/about.astro
+++ b/astro-blog-template/src/pages/about.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 const title = 'About';
 const description = 'About your blog.';
 const permalink = `${Astro.site.href}about`;
-const fetchAbouts = await fetch('http://42.192.151.130:9003/api/abouts').then(res => res.json());
+const fetchAbouts = await fetch('https://blog.admin.pointfree.cn/api/abouts').then(res => res.json());
 console.log('fetchAbouts', fetchAbouts.data[0].attributes.content);
 ---
 
