--- a/astro-blog-template/src/pages/index.astro
+++ b/astro-blog-template/src/pages/index.astro
@@ -9,14 +9,31 @@ const permalink = Astro.site.href;
 <BaseLayout title={title} description={description} permalink={permalink}>
   <div class="home-container">
     <div class="home-copy">
-      <h1>Welcome to your new Astro Blog</h1>
-      <p>Check out the docs on <a href="https://github.com/zard999/zard-blog" target="_blank" rel="noopener">GitHub</a> to get started.</p>
+      <h1 id="typed"></h1>
+      <p>
+        Check out the docs on <a
+          href="https://github.com/zard999/zard-blog"
+          target="_blank"
+          rel="noopener"
+        >
+          GitHub
+        </a> to get started.
+      </p>
     </div>
 
     <div class="hero-image-container">
       <picture>
-        <source srcset="/assets/home-illustration.webp" media="(min-width: 600px)">
-        <img class="hero-image" alt="Illustration of person reading a book" src="/assets/home-illustration-small.webp" width="550" height="466">
+        <source
+          srcset="/assets/home-illustration.webp"
+          media="(min-width: 600px)"
+        />
+        <img
+          class="hero-image"
+          alt="Illustration of person reading a book"
+          src="/assets/home-illustration-small.webp"
+          width="550"
+          height="466"
+        />
       </picture>
     </div>
   </div>
@@ -49,7 +66,10 @@ const permalink = Astro.site.href;
   .home-copy h1 {
     font-weight: 700;
     margin-bottom: 0.5em;
-    line-height: 1.3;
+    display: inline;
+    white-space: pre-wrap;
+    line-height: 30px;
+    margin-bottom: 0.75em;
   }
 
   .home-copy p {
@@ -67,7 +87,7 @@ const permalink = Astro.site.href;
   }
 
   .caption {
-    font-size: .8em;
+    font-size: 0.8em;
     font-style: italic;
     text-align: left;
   }
@@ -100,3 +120,29 @@ const permalink = Astro.site.href;
     }
   }
 </style>
+
+<script>
+  import Typed from 'typed.js';
+  const classStr = `random-${Math.random().toString(36).slice(-7)}`;
+  console.log('classStr', classStr);
+  new Typed(`#typed`, {
+    strings: [
+      `It is difficult to free fools from the chains they revere.
+很难使傻瓜摆脱他们所崇尚的束缚。
+Welcome to my blog.`,
+      `It is difficult to free fools from the chains they revere.
+很难使傻瓜摆脱他们所崇尚的束缚。
+Have a good day.`,
+      `It is difficult to free fools from the chains they revere.
+很难使傻瓜摆脱他们所崇尚的束缚。
+You can follow me on the Github.`,
+      `It is difficult to free fools from the chains they revere.
+很难使傻瓜摆脱他们所崇尚的束缚。
+---- Voltaire. `
+    ],
+    stringsElement: 'null',
+    typeSpeed: 20, // 打字速度
+    backSpeed: 20, // 退格速度
+    shuffle: false // 随机打乱
+  });
+</script>
